# embedded-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flash.sh  requirements.txt  setup.sh
cmake/: pico-sdk.cmake  pico-sdk_settings.cmake
src/: main.c
